test/Fail/Issue2862fun1.err
Issue2862fun1.agda:10.3-6: error: [MissingDefinitions]
The following names are declared but lack a definition:
val
when scope checking the declaration
  module N where

Issue2862fun1.agda:14.3-6: error: [ClashingDefinition]
Multiple definitions of val. Previous definition
val is in scope as
  * a postulate Issue2862fun1.N.val brought into scope by
    - the opening of N at Issue2862fun1.agda:13.8-9
    - its definition at Issue2862fun1.agda:10.3-6
when scope checking the declaration
  val : _
